vault/vault/server-ingress.yaml
---
# Source: vault/templates/server-ingress.yaml
apiVersion: networking.k8s.io/v1

kind: Ingress
metadata:
  name: vault
  namespace: vault
  labels:
    helm.sh/chart: vault-0.23.0
    app.kubernetes.io/name: vault
    app.kubernetes.io/instance: vault
    app.kubernetes.io/managed-by: Helm
  annotations:
    kubernetes.io/ingress.class: nginx
    
spec:
  rules:
    - host: "vault.dev.local"
      http:
        paths:

          - path: /
            
            pathType: Prefix
            
            backend:
              
              service:
                name: vault-active
                port:
                  number: 8200
